--- a/weatherlink_restart.service
+++ b/weatherlink_restart.service
@@ -3,7 +3,7 @@ Description=Stop Scale Data AcQuisition (DAQ)
 
 [Service]
 Type=simple
-ExecStart=systemctl restart dgt2.service
+ExecStart=systemctl restart weatherlink.service
 #KillSignal=SIGINT
 
 [Install]
